# kcp

./: .gitignore  AI_AGENT_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  GENESIS.json  KCP_MANIFEST.json  Makefile  README.md  README.pt-br.md  RFC-001-CORE.md  SPEC.md  demo_mcp.py  demo_peer.py  llms.txt  ruff.toml  sonar-project.properties
.github/workflows/: code-quality.yml  publish-pypi.yml
docker/: entrypoint.sh
docs/: CNAME  comparison.md  identity-guide.md  index.html  linkedin-post.md  network-report-2026-03-21.md  openapi-testing.md  peers.json  presentation.html  roadmap.md  site-access-report-2026-03-21.md  status.html  testing.md  use-cases.md  whitepaper.md
examples/: payload.json  query.json  response.json
infra/: deploy-infra.sh  generate-status.py  ip_monitor.html  kcp-blackhole.py  kcp-blackhole.service  kcp-peer04.service  kcp-peer05.service  kcp-peer07.service  nginx-kcp-locations.conf  nginx-kcp-peers.conf  seed-artifacts.py  traffic-report.env.example
mcp-server/: README.md  claude_desktop_config.json  pyproject.toml  setup_mcp.py
mcp-server/kcp_mcp_server/: __init__.py  __main__.py  server.py
mcp-server/tests/: test_bridge.py
poc/: kcp_core.py
rfcs/: kcp-001-core.md
sdk/go/: README.md  go.mod
sdk/go/cmd/kcp/: main.go
sdk/go/pkg/crypto/: crypto.go
sdk/go/pkg/models/: models.go
sdk/go/pkg/node/: node.go
sdk/go/pkg/store/: store.go
sdk/python/: README.md  pyproject.toml
sdk/python/kcp/: __init__.py  cli.py  client.py  content_store.py  crypto.py  hub.py  identity.py  identity_cli.py  models.py  node.py  store.py
sdk/python/kcp/ui/: index.html
sdk/python/tests/: test_crypto.py  test_models.py  test_node.py  test_server.py
sdk/typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: crypto.ts  index.ts  models.ts  node.ts  store.ts
sdk/typescript/tests/: kcp.test.ts
