[project]
name = "kcp-mcp-server"
version = "0.1.0"
description = "KCP MCP Bridge — exposes KCPNode as a Model Context Protocol server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thiago Silva" }]
keywords = ["kcp", "mcp", "knowledge", "protocol", "ai", "bridge"]

dependencies = [
    "mcp>=1.0.0",
    "kcp>=0.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
kcp-mcp-server = "kcp_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kcp_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
